NXP-6784: Add new method to return directly Faceted's ContentViewHeaders

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
@@ -12,14 +12,11 @@
       value="#{facetedSearchActions.currentContentViewName}"
       id="facetedSearchSelector" styleClass="langSelect"
       onchange="Element.next(this).firstChild.click();">
-      <c:forEach var="contentViewName"
-        items="#{facetedSearchActions.contentViewNames}"
+      <c:forEach var="contentViewHeader"
+        items="#{facetedSearchActions.contentViewHeaders}"
         varStatus="contentViewListStatus">
-        <nxu:set var="contentView"
-          value="#{contentViewActions.getContentView(contentViewName)}">
-          <f:selectItem itemValue="#{contentViewName}"
-            itemLabel="#{nxu:test(contentView.translateTitle, messages[contentView.title], contentView.title)}" />
-        </nxu:set>
+          <f:selectItem itemValue="#{contentViewHeader.name}"
+            itemLabel="#{nxu:test(contentViewHeader.translateTitle, messages[contentViewHeader.title], contentViewHeader.title)}" />
       </c:forEach>
     </h:selectOneMenu>
 
