--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -49,7 +49,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>You are logged as Administrator</td>
+  <td>Administrator</td>
   <td></td>
 </tr>
 <tr>
