--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as Administrator</td>
+	<td>Administrator</td>
 	<td></td>
 </tr>
 <tr>
