Fix selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -216,7 +216,7 @@
 </tr>
 <tr>
   <td>clickAndWait</td>
-  <td>link=Administrator</td>
+  <td>link=Personal Workspace</td>
   <td></td>
 </tr>
 <tr>
