fix selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -216,6 +216,11 @@
 </tr>
 <tr>
   <td>clickAndWait</td>
+  <td>link=Back to document base</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
   <td>link=Personal Workspace</td>
   <td></td>
 </tr>
