--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -4,13 +4,12 @@
   xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxdir="http://nuxeo.org/nxdirectory"
-  xmlns:cm="http://org.nuxeo.cm/"
-  xmlns:rich="http://richfaces.org/rich"
+  xmlns:cm="http://org.nuxeo.cm/" xmlns:rich="http://richfaces.org/rich"
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
-  style="display:inline">
+  style="display: inline; float: left">
 
   <c:set var="minChars"
-    value="#{nxu:test(!empty widget.properties.minChars, widget.properties.minChars, '3')}" />
+    value="#{nxu:test(!empty widget.properties.minChars, widget.properties.minChars, '1')}" />
   <c:set var="frequency"
     value="#{nxu:test(!empty widget.properties.frequency, widget.properties.frequency, '0')}" />
   <c:set var="requestDelay"
@@ -20,7 +19,7 @@
     <h:panelGrid id="#{widget.id}_mailbox_panel" columns="3">
       <h:panelGroup>
         <span id="#{widget.id}_mailbox_suggestDiv"> <h:inputText
-            id="#{widget.id}_mailbox_suggest"
+            id="#{widget.id}_faceted_search_suggest"
             onkeydown="if (event.keyCode == 13) {return false;}" /> </span>
         <a4j:status>
           <f:facet name="start">
@@ -30,7 +29,8 @@
         <rich:suggestionbox
           id="#{widget.id}_faceted_search_suggestionBox"
           for="#{widget.id}_faceted_search_suggest" tokens=""
-          suggestionAction="#{}" var="result" fetchValue=""
+          suggestionAction="#{facetedSearchSuggestionActions.getDocumentSuggestions}"
+          var="result" fetchValue=""
           nothingLabel="#{messages['label.content.empty.search']}"
           minChars="#{minChars}" frequency="#{frequency}"
           requestDelay="#{requestDelay}">
@@ -55,8 +55,6 @@
             <h:outputText value="#{result.title}" />
           </h:column>
         </rich:suggestionbox>
-        <br />
-        <h:outputText value="Help Message" />
         <h:message for="#{widget.id}_mailboxId"
           styleClass="errorMessage" />
       </h:panelGroup>
