--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -37,13 +37,13 @@
           <f:param name="facetedSuggestionSearchType"
             value="#{widget.properties['facetedSuggestionSearchType']}" />
           <a4j:support event="onselect" id="#{widget.id}_a4jSupport"
-            focus="" bypassUpdates="true" reRender="">
+            focus="" bypassUpdates="true" reRender="facetedSearchForm">
             <f:param name="facetedSuggestionSearchType"
               value="#{widget.properties['facetedSuggestionSearchType']}" />
             <f:setPropertyActionListener value="#{result.id}"
               target="#{suggestionActions.selectedValue}" />
             <nxu:actionListenerMethod
-              value="#{suggestionActions.addSingleBoundSelection}" />
+              value="#{facetedSearchSuggestionActions.createSavedSearch(result)}" />
             <f:param name="suggestionSelectionHiddenId"
               value="#{widget.id}_facetedId" />
             <f:param name="suggestionSelectionOutputId"
@@ -55,8 +55,6 @@
             <h:outputText value="#{result.title}" />
           </h:column>
         </rich:suggestionbox>
-        <h:message for="#{widget.id}_mailboxId"
-          styleClass="errorMessage" />
       </h:panelGroup>
 
     </h:panelGrid>
