--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -37,24 +37,17 @@
           <f:param name="facetedSuggestionSearchType"
             value="#{widget.properties['facetedSuggestionSearchType']}" />
           <a4j:support event="onselect" id="#{widget.id}_a4jSupport"
-            focus="" bypassUpdates="true" reRender="facetedSearchForm">
-            <f:param name="facetedSuggestionSearchType"
-              value="#{widget.properties['facetedSuggestionSearchType']}" />
-            <f:setPropertyActionListener value="#{result.id}"
-              target="#{suggestionActions.selectedValue}" />
+            focus="" bypassUpdates="true" reRender="">
             <nxu:actionListenerMethod
-              value="#{facetedSearchSuggestionActions.createSavedSearch(result)}" />
-            <f:param name="suggestionSelectionHiddenId"
-              value="#{widget.id}_facetedId" />
-            <f:param name="suggestionSelectionOutputId"
-              value="#{widget.id}_faceted" />
-            <f:param name="suggestionSelectionDeleteId"
-              value="#{widget.id}_selection_reset" />
+              value="#{facetedSearchSuggestionActions.handleSelection(result.type,result.id)}" />
           </a4j:support>
           <h:column>
             <h:outputText value="#{result.title}" />
           </h:column>
         </rich:suggestionbox>
+        <h:commandButton action="search_results_simple"
+    value="#{messages['command.search']}" styleClass="button"
+    id="simpleSearchSubmitButton" />
       </h:panelGroup>
 
     </h:panelGrid>
