--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -37,9 +37,8 @@
           <f:param name="facetedSuggestionSearchType"
             value="#{widget.properties['facetedSuggestionSearchType']}" />
           <a4j:support event="onselect" id="#{widget.id}_a4jSupport"
-            focus="" bypassUpdates="true" reRender="">
-            <nxu:actionListenerMethod
-              value="#{facetedSearchSuggestionActions.handleSelection(result.type,result.value)}" />
+            focus="" bypassUpdates="true" reRender=""
+            action="#{facetedSearchSuggestionActions.handleSelection(result.type,result.value)}">
           </a4j:support>
           <h:column>
             <h:graphicImage value="#{result.iconURL}" />
