--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -31,10 +31,9 @@
           id="#{widget.id}_faceted_search_suggestionBox"
           for="#{widget.id}_faceted_search_suggest" tokens=""
           suggestionAction="#{facetedSearchSuggestionActions.getDocumentSuggestions}"
-          var="result" fetchValue=""
-          nothingLabel="#{messages['label.content.empty.search']}"
-          minChars="#{minChars}" frequency="#{frequency}"
-          requestDelay="#{requestDelay}">
+          var="result" fetchValue="" width="300"
+          nothingLabel="Search with key words" minChars="#{minChars}"
+          frequency="#{frequency}" requestDelay="#{requestDelay}">
           <f:param name="facetedSuggestionSearchType"
             value="#{widget.properties['facetedSuggestionSearchType']}" />
           <a4j:support event="onselect" id="#{widget.id}_a4jSupport"
