better method name and remove useless injection

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -37,7 +37,7 @@
         <rich:suggestionbox
           id="faceted_search_suggestionBox"
           for="faceted_search_suggest_box" tokens=""
-          suggestionAction="#{facetedSearchSuggestionActions.getDocumentSuggestions}"
+          suggestionAction="#{facetedSearchSuggestionActions.getSuggestions}"
           var="result" fetchValue="" width="300"
           nothingLabel="Search with key words" minChars="#{minChars}"
           frequency="#{frequency}" requestDelay="#{requestDelay}">
