avoid using the old simple search actions bean to make the experience consistent

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -26,7 +26,7 @@
         <h:inputText id="faceted_search_suggest_box"
             class="faceted_search_suggest_box"
             onkeydown="if (event.keyCode == 13) {return false;}"
-            value="#{documentSearchActions.simpleSearchKeywords}" />
+            value="#{facetedSearchSuggestionActions.searchKeywords}" />
         <script type="text/javascript">
         <!--
          jQuery(document).bind('keypress', '/', function() {
@@ -54,7 +54,8 @@
             <h:outputText value="#{result.label}" />
           </h:column>
         </rich:suggestionbox>
-        <h:commandButton action="search_results_simple"
+        <h:commandButton
+          action="#{facetedSearchSuggestionActions.performKerwordsSearch}"
           value="#{messages['command.search']}" styleClass="button"
           id="simpleSearchSubmitButton" />
       </h:panelGroup>
