do not print a '/' in the suggestion box when using keyboard navigation

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/search/faceted_search_suggestionbox.xhtml
@@ -29,8 +29,10 @@
             value="#{facetedSearchSuggestionActions.searchKeywords}" />
         <script type="text/javascript">
         <!--
-         jQuery(document).bind('keypress', '/', function() {
+         jQuery(document).bind('keydown', '/', function(event) {
+            event.preventDefault();
             jQuery('input.faceted_search_suggest_box').focus();
+            return false;
          });
         -->
         </script>
