NXP-7920: use default delay values for tooltip

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
@@ -115,7 +115,7 @@
 
 <script>
   jQuery(document).ready(function() {
-    jQuery("span.facetedSearchWrapperTooltip[title]").tooltip({delay:1000});
+    jQuery("span.facetedSearchWrapperTooltip[title]").tooltip();
   });
 </script>
 
