NXP-8772: Properly display the title of the selected faceted search.

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -23,7 +23,7 @@
           <ui:define name="content_view_title">
             <h1>
               <h:outputText
-                value="#{messages['label.faceted.search.default']}" />
+                value="#{messages[contentViewActions.getContentView(contentViewName).title]}" />
               <span>
                 <h:outputLink
                   value="#{facetedSearchActions.permanentLinkUrl}">
