--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_directory_tree_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_directory_tree_widget_template.xhtml
@@ -85,7 +85,8 @@
   <div id="#{widget.id}_tree" class="facetedSearchPopUp">
   <div class="closePopUpHeader"><span class="popUpTitle"><h:outputText
     value="#{messages['label.search.popup.title']}" /></span> <span
-    class="closePopUp" onclick="hideTree('##{widget.id}_tree');">Close</span>
+    class="closePopUp" onclick="hideTree('##{widget.id}_tree');">
+    #{messages['label.search.popup.close']}</span>
   <div style="clear: both;"></div>
   </div>
   <div class="popUpContent"><rich:tree id="#{widget.id}_treeId"
