NXP-8075: use a  widget of type container instead of faceted_search_wrapper

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
@@ -3,6 +3,9 @@
   xmlns:c="http://java.sun.com/jstl/core"
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
   id="#{widget.id}">
+<c:if test="false">
+ deprecated since 5.6
+</c:if>
 
 <div class="#{widget.properties.styleClass}">
 
