NXP-8075: fixing selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -77,7 +77,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_toInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_endInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
@@ -92,12 +92,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_toInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_endInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
@@ -127,7 +127,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
@@ -137,7 +137,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_toInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_endInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
@@ -152,12 +152,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_fromInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_startInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_toInputDate</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_endInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
