NXP-8075: fix some facaeted search tests, and disable coverage and path tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -81,8 +81,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>typeKeys</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggest</td>
+	<td>type</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_1_suggest</td>
 	<td>Adm</td>
 </tr>
 <tr>
