--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="selenium.base" href="http://localhost:8080/nuxeo"/>
+  <link rel="selenium.base" href="http://localhost:8080/nuxeo/"/>
   <title>fullTextSearch</title>
 </head>
 <body>
@@ -72,7 +72,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext_1</td>
 	<td>Klaatu</td>
 </tr>
 <tr>
@@ -107,7 +107,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext_1</td>
 	<td>no match</td>
 </tr>
 <tr>
