--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://localhost:8080/nuxeo" />
+<link rel="selenium.base" href="http://localhost:8080/nuxeo/" />
 <title>searchPermlink</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext_1</td>
 	<td>Klaatu</td>
 </tr>
 <tr>
@@ -78,7 +78,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@
 </tr>
 <tr>
 	<td>verifyNotValue</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td></td>
 </tr>
 </tbody></table>
