--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="selenium.base" href="http://localhost:8080/nuxeo"/>
+  <link rel="selenium.base" href="http://localhost:8080/nuxeo/"/>
   <title>dateRangeSearch</title>
 </head>
 <body>
@@ -77,8 +77,8 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_endInputDateInputDate</td>
-	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 11:59 PM</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -92,12 +92,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_endInputDateInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_endInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
@@ -127,7 +127,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_created_startInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
@@ -137,8 +137,8 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_endInputDateInputDate</td>
-	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_startInputDateInputDate</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 11:59 PM</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -152,12 +152,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_startInputDateInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_startInputDateInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_endInputDateInputDate</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified_endInputDateInputDate</td>
 	<td></td>
 </tr>
 <tr>
@@ -187,7 +187,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext_1</td>
 	<td>Klaatu</td>
 </tr>
 <tr>
