NXP-8075: use back typeKeys instead of type to trigger suggestion

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -81,7 +81,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>typeKeys</td>
 	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_1_suggest</td>
 	<td>Adm</td>
 </tr>
