--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -92,7 +92,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
+	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_1_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
