NXP-10480: fix faceted search on coverage and subjects and selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -198,8 +198,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>//div[@id='nxw_dc_coverage_1']/span/span[2]</td>
+	<td>//a[@id='nxw_dc_coverage_1_openPopup']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Europe</td>
 	<td></td>
 </tr>
 <tr>
@@ -214,7 +224,7 @@
 </tr>
 <tr>
 	<td>click</td>
-    <td>facetedSearchForm:nxl_faceted_search_default:nxw_categorization_search:nxw_dc_coverage_1_treeId:nxw__dc__coverage__1__recursiveTreeNodesAdaptorId:4::nxw_dc_coverage_1_treeNodeId:handle:img:expanded</td>
+        <td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_coverage_1_treeId:nxw__dc__coverage__1__recursiveTreeNodesAdaptorId:3::nxw_dc_coverage_1_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
@@ -273,8 +283,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>//div[@id='nxw_dc_subjects_1']/span/span[2]</td>
+	<td>//a[@id='nxw_dc_subjects_1_openPopup']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Art</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,7 +309,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_categorization_search:nxw_dc_subjects_1_treeId:nxw__dc__subjects__1__recursiveTreeNodesAdaptorId:0::nxw_dc_subjects_1_treeNodeId:handle:img:expanded</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_subjects_1_treeId:nxw__dc__subjects__1__recursiveTreeNodesAdaptorId:0::nxw_dc_subjects_1_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
