--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
@@ -71,13 +71,18 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Folder</td>
+	<td>watchA4jRequests</td>
+	<td></td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//div[@id='nxw_ecm_path_1']/span/span[2]</td>
+	<td>//a[@id='nxw_ecm_path_1_openPopup']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Path</td>
 	<td></td>
 </tr>
 <tr>
@@ -92,17 +97,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_path_search:nxw_ecm_path_1_treeId:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:0:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:2::nxw_ecm_path_1_treeNodeId:handle:img:expanded</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_path_1_treeId:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:0:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:2::nxw_ecm_path_1_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForA4jRequest</td>
 	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
 	<td></td>
 </tr>
 <tr>
