NXP-10533: update selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -204,7 +204,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_dc_coverage_1_openPopup']/img</td>
+	<td>//a[@id='nxw_dc_coverage_1_openPopup']</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,7 +289,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_dc_subjects_1_openPopup']/img</td>
+	<td>//a[@id='nxw_dc_subjects_1_openPopup']</td>
 	<td></td>
 </tr>
 <tr>
