--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
@@ -77,7 +77,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_ecm_path_1_openPopup']/img</td>
+	<td>//a[@id='nxw_ecm_path_1_openPopup']</td>
 	<td></td>
 </tr>
 <tr>
