NXP-9433: adapt selenium tests to the 'NEw' action changes

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/setUp.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/setUp.html
@@ -56,13 +56,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>mouseDown</td>
-	<td>link=Create a new workspace</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
-	<td>link=Workspace</td>
+	<td>link=Create a new workspace</td>
 	<td></td>
 </tr>
 <tr>
@@ -92,8 +87,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>mouseDown</td>
+	<td>click</td>
 	<td>link=New</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Available document types</td>
 	<td></td>
 </tr>
 <tr>
@@ -127,8 +127,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>mouseDown</td>
+	<td>click</td>
 	<td>link=New</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Available document types</td>
 	<td></td>
 </tr>
 <tr>
@@ -162,8 +167,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>mouseDown</td>
+	<td>click</td>
 	<td>link=New</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Available document types</td>
 	<td></td>
 </tr>
 <tr>
